2013-06-06  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/CMakeLists.txt: (0.2.6)
	* cpp/src/third-party/boost-1.50.0/CMakeLists.txt: 

	- BUILD_SHARED_LIBS is a variable specific to the boost
	libraries. It's better to put it inside the boost CMakeLists.txt,
	to avoid it affecting other subprojects unintentionally.

2013-06-06    <Ramon Casero@BORON>

	* matlab/FiltersToolbox/im2dmatrix.cpp: (0.2.4)

	- Small adjustments to remove some compilation errors under
	VisualStudio 10 in Windows.

2013-06-06  Ramon Casero  <rcasero@gmail.com>

	* matlab/test/test_cgal_closest_trifacet.m: (0.2.2)

	- Fix bug. The point coordinates in the right ventricle example
	where incorrectly scaled.

	- Fix bug. In the right ventricle example we were calling
	closest_trifacet() instead of cgal_closest_trifacet().

	* matlab/CgalToolbox/CgalClosestTriFacet.cpp: (0.1.3)
	* matlab/CgalToolbox/cgal_closest_trifacet.m: (0.1.1)
	* matlab/ManifoldToolbox/closest_trifacet.m: (0.2.2)

	- Add note to help header comparing speeds.

	* matlab/CgalToolbox/CgalClosestTriFacet.cpp: (0.1.2)

	- Compute the distance directly from the closest point result
	instead of running tree.squared_distance(), which is redundant.

	- I had forgotten to comment out some debug code.

	* matlab/test/test_closest_trifacet.m: (0.3.1)

	- Fix bug. I had the wrong function name in the Right Ventricle
	example, calling cgal_closest_trifacet() instead of
	closest_trifacet().

	* matlab/MatlabImageHeader.cxx: (0.1.1)
	* matlab/GerardusCommon.h: (9.0.2)
	* matlab/MatlabExportFilter.hxx: (0.2.1)

	- Small adjustments to remove some compilation errors under
	VisualStudio 10 in Windows.

	* Delete cpp/src/third-party/CGAL-4.2/examples:
	* Delete cpp/src/third-party/CGAL-4.2/demo:
	* Delete cpp/src/third-party/CGAL-4.2/doc_html:

	- Unnecessary to build the project, just make checking out the
	project slower.

2013-06-05  Ramon Casero  <rcasero@gmail.com>

	* Delete cpp/src/third-party/CGAL-4.0.2: